--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ crossorigin="anonymous"></script>
   <body>
     <div id="navBar">
       <h1>Player 1</h1>
-      <h2 id="time">30</h2>
+      <h2>You have 30 seconds to make as many words as you can</h2>
+      <h2>Don't be stupid</h2>
       <button id="startButton">Start</button>
     </div>
 
@@ -32,7 +33,7 @@ crossorigin="anonymous"></script>
       <div id="submitContainer">
         <div id="wordContainer">
             <p id="clickedWord"></p>
-            <p id="countdownTimer">30</p>
+            <p id="countdownTimer">5</p>
         </div>
         <button id="enterButton">Enter</button>
       </div>
