--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
 crossorigin="anonymous"></script>
 
+  <script src="words.js"></script>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   </head>
   <body>
