--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="navBar">
-      <h1>Player 1</h1>
+      <h1 id="currentPlayer">Player 1</h1>
       <h2>You have 30 seconds to make as many words as you can</h2>
       <h2>Don't be stupid</h2>
       <button id="startButton">Start</button>
