added score logic and game over logic

--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@ crossorigin="anonymous"></script>
       <div id="submitContainer">
         <div id="wordContainer">
             <p id="clickedWord"></p>
-            <p id="countdownTimer">5</p>
+            <p id="countdownTimer">20</p>
         </div>
         <button id="enterButton">Enter</button>
       </div>
 
       <div id="playerBoard">
         <div id="playerOneBoard">
-          <div id="playerOneScore">
+          <div id="playerOneScoreSection">
             <p>Player 1</p>
-            <p>Score: 0</p>
+            <p id="playerOneScoreBoard">Score: 0</p>
           </div>
           <div id="hiddenImageOne">
             <img src="lock.png" alt="">
           </div>
         </div>
         <div id="playerTwoBoard">
-          <div id="playerTwoScore">
+          <div id="playerTwoScoreSection">
             <p>Player 2</p>
-            <p>Score: 0</p>
+            <p id="playerTwoScoreBoard">Score: 0</p>
           </div>
           <div id="hiddenImageTwo">
               <img src="lock.png" alt="">
