--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ crossorigin="anonymous"></script>
       <div id="submitContainer">
         <div id="wordContainer">
             <p id="clickedWord"></p>
-            <p id="countdownTimer">10</p>
+            <p id="countdownTimer">30</p>
         </div>
         <button id="enterButton">Enter</button>
       </div>
@@ -46,6 +46,8 @@ crossorigin="anonymous"></script>
             <p>Player 1</p>
             <p id="playerOneScoreBoard">Score: 0</p>
           </div>
+          <div id="playerOneAddedWord">
+          </div>
           <div id="hiddenImageOne">
             <img src="lock.png" alt="">
           </div>
@@ -54,6 +56,8 @@ crossorigin="anonymous"></script>
           <div id="playerTwoScoreSection">
             <p>Player 2</p>
             <p id="playerTwoScoreBoard">Score: 0</p>
+          </div>
+          <div id="playerTwoAddedWord">
           </div>
           <div id="hiddenImageTwo">
               <img src="lock.png" alt="">
