--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
 crossorigin="anonymous"></script>
 
-  <script src="words.js"></script>
+  <script src="./js/words.js"></script>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   </head>
   <body>
@@ -47,7 +47,7 @@ crossorigin="anonymous"></script>
             <p id="playerOneScoreBoard">Score: 0</p>
           </div>
           <div id="hiddenImageOne">
-            <img src="lock.png" alt="">
+            <img src="./images/lock.png" alt="">
           </div>
           <div id="playerOneAddedWord">
           </div>
@@ -58,7 +58,7 @@ crossorigin="anonymous"></script>
             <p id="playerTwoScoreBoard">Score: 0</p>
           </div>
           <div id="hiddenImageTwo">
-              <img src="lock.png" alt="">
+              <img src="./images/lock.png" alt="">
           </div>
           <div id="playerTwoAddedWord">
           </div>
